--- a/config.yaml
+++ b/config.yaml
@@ -7,10 +7,6 @@ ollama:
   port: 11434
   model: "deepseek-r1:latest"
   timeout: 120  # seconds
-  stream: true  # Enable streaming for faster time-to-first-token
-  num_predict: 220  # Max tokens (performance optimization)
-  temperature: 0.3  # Determinism (performance optimization)
-  probe_num_predict: 100  # Faster probes
 
 # Go Scroll Engine Configuration
 scroll_engine:
@@ -39,8 +35,8 @@ sap:
 
 # Probe Suite Configuration
 probe_suite:
-  default_probe_count: 1  # Reduced for performance (was 3)
-  include_control: false  # Disabled for performance (was true)
+  default_probe_count: 3
+  include_control: true
   protocols:
     - conflict_stress
     - underspecification_stress
